--- a/ZIPPLZ_BE/.gitignore
+++ b/ZIPPLZ_BE/.gitignore
@@ -4,7 +4,6 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-
 ### STS ###
 .apt_generated
 .classpath
@@ -35,3 +34,6 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### API KEY ###
+!**/src/main/resources/application-local.properties
