--- a/ZIPPLZ_BE/src/main/resources/application.properties
+++ b/ZIPPLZ_BE/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=ZIPPLZ_BE
 spring.config.import=application-local.properties
+
 server.port: 5000
 server.ssl.enabled: true
 
@@ -11,7 +12,7 @@ spring.datasource.username=ssafy
 spring.datasource.password=ssafy
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jwt.secret = MY_JWT_KEY
+spring.jwt.secret = ${MY_JWT_KEY}
 
 server.ssl.enabled=false
 
@@ -26,7 +27,7 @@ spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=false
 
 #oauth2 google
 spring.security.oauth2.client.registration.google.client-id=470120292420-n4qn99hg68ut200or9kbslb9dec62sgs.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=MY_GOOGLE_AUTH_KEY
+spring.security.oauth2.client.registration.google.client-secret=${MY_GOOGLE_AUTH_KEY}
 spring.security.oauth2.client.registration.google.scope=profile, email
 spring.security.oauth2.client.registration.google.redirect-uri=https://zipplz.site/api/login/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
@@ -37,7 +38,7 @@ spring.security.oauth2.client.registration.kakao.client-name=kakao
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.kakao.redirect-uri=https://zipplz.site/api/login/oauth2/code/kakao
 spring.security.oauth2.client.registration.kakao.client-id=e9d55507107ccc6780372f7281c4ba78
-spring.security.oauth2.client.registration.kakao.client-secret=MY_KAKAO_AUTH_KEY
+spring.security.oauth2.client.registration.kakao.client-secret=${MY_KAKAO_AUTH_KEY}
 spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
 spring.security.oauth2.client.registration.kakao.scope=profile_nickname,profile_image,account_email
 spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
@@ -54,8 +55,8 @@ spring.main.allow-bean-definition-overriding=true
 
 
 # S3
-cloud.aws.credentials.accessKey=MY_S3_ACCESSKEY
-cloud.aws.credentials.secretKey=MY_S3_SECRETKEY
+cloud.aws.credentials.accessKey=${MY_S3_ACCESSKEY}
+cloud.aws.credentials.secretKey=${MY_S3_SECRETKEY}
 cloud.aws.s3.bucketName=zipplzbucket
 cloud.aws.region.static=us-east-1
 cloud.aws.stack.auto-=false
