--- a/ZIPPLZ_BE/.gitignore
+++ b/ZIPPLZ_BE/.gitignore
@@ -36,4 +36,4 @@ out/
 .vscode/
 
 ### API KEY ###
-!**/src/main/resources/application-local.properties
+**/src/main/resources/application-local.properties
